--- a/0x03-queuing_system_in_js/package.json
+++ b/0x03-queuing_system_in_js/package.json
@@ -12,25 +12,26 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "chai-http": "^4.3.0",
-        "express": "^4.17.1",
+        "chai-http": "latest",
+        "express": "latest",
         "kue": "^0.11.1",
-        "redis": "^4.6.6"
+        "redis": "latest"
     },
     "devDependencies": {
-        "@babel/cli": "^7.8.0",
-        "@babel/core": "^7.8.0",
-        "@babel/node": "^7.8.0",
-        "@babel/preset-env": "^7.8.2",
-        "@babel/register": "^7.8.0",
-        "chai": "^4.2.0",
-        "eslint": "^6.4.0",
-        "eslint-config-airbnb-base": "^14.0.0",
-        "eslint-plugin-import": "^2.18.2",
-        "eslint-plugin-jest": "^22.17.0",
-        "mocha": "^10.2.0",
-        "nodemon": "^2.0.2",
-        "request": "^2.88.0",
-        "sinon": "^7.5.0"
-    }
+        "@babel/cli": "latest",
+        "@babel/core": "latest",
+        "@babel/node": "latest",
+        "@babel/preset-env": "latest",
+        "@babel/register": "latest",
+        "chai": "latest",
+        "eslint": "latest",
+        "eslint-config-airbnb-base": "latest",
+        "eslint-plugin-import": "latest",
+        "eslint-plugin-jest": "latest",
+        "mocha": "latest",
+        "nodemon": "latest",
+        "request": "latest",
+        "sinon": "latest"
+    },
+    "type": "module"
 }
